fixing configuration, demo project can now be started

--- a/SwizlyPeasy.Clusters.Demo/appsettings.Development.json
+++ b/SwizlyPeasy.Clusters.Demo/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SwizlyPeasyConfig": {
+    "ServiceDiscovery": {
+      "Scheme": "http",
+      "RefreshIntervalInSeconds": 120,
+      "LoadBalancingPolicy": "Random",
+      "KeyValueStoreKey": "SwizlyPeasy.Clusters",
+      "ServiceDiscoveryAddress": "http://consul:8500"
+    }
   }
 }
