--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,29 @@ services:
     depends_on:
       consul-service:
          condition: service_healthy
+  swizlypeasy.clusters.demo.client1:
+    image: ${DOCKER_REGISTRY-}swizlypeasydemoapi
+    hostname: demo1
+    ports:
+        - "8002:80"
+        - "8003:443"
+    build:
+        context: .
+        dockerfile: SwizlyPeasy.Clusters.Demo.Client/Dockerfile
+    depends_on:
+        consul-service:
+         condition: service_healthy
+  swizlypeasy.clusters.demo.client2:
+    image: ${DOCKER_REGISTRY-}swizlypeasydemoapi
+    hostname: demo2
+    ports:
+        - "8004:80"
+        - "8005:443"
+    build:
+        context: .
+        dockerfile: SwizlyPeasy.Clusters.Demo.Client/Dockerfile
+    depends_on:
+        consul-service:
+         condition: service_healthy
+
 
