--- a/SwizlyPeasy.Clusters.Demo.Client/SwizlyPeasy.Clusters.Demo.Client.csproj
+++ b/SwizlyPeasy.Clusters.Demo.Client/SwizlyPeasy.Clusters.Demo.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,8 +12,12 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="SwizlyPeasy.Common" Version="0.1.0-beta" />
-    <PackageReference Include="SwizlyPeasy.Consul" Version="0.1.0-beta" />
+    <PackageReference Include="SwizlyPeasy.Common" Version="0.1.1-beta" />
+    <PackageReference Include="SwizlyPeasy.Consul" Version="0.1.1-beta" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SwizlyPeasy.Clusters.Eureka\SwizlyPeasy.Clusters.Eureka.csproj" />
   </ItemGroup>
 
 </Project>
